added production based features for this app

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ unstructured[all-docs]==0.15.13
 pypdfium2==4.30.0
 PyMuPDF==1.24.10
 pypdf==5.0.1
+gunicorn==22.0.0
 
 # Migrations
 alembic==1.13.2
