refactor: Apply full project optimization and decoupling

--- a/backend/app/.env
+++ b/backend/app/.env
@@ -2,7 +2,7 @@ GOOGLE_API_KEY=AIzaSyBrSDa5b2XtiKTnxQfV5SujuRL-Zoiowho
 ENVIRONMENT=production
 SECRET_KEY=eg9B3oj1L4fAE4j_xAXyW3W0Hj4VDbYj0Fcodbd2_kOPwRwB-Nnu26GMJ8LTlpNQ
 DATABASE_URL=postgresql://neondb_owner:npg_h90DoNrnCGIq@ep-plain-smoke-a1dlp14p-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-WHISPER_MODEL_SIZE=small
+WHISPER_MODEL_SIZE=tiny
 CORS_ALLOW_ORIGINS=https://app.example.com,https://admin.example.com
 ACCESS_TOKEN_EXP_MINUTES=15
 REFRESH_TOKEN_EXP_DAYS=14
